# N-Body-Simulations

./: README.md
Barnes-Hut/: Barnes-Hut.cabal  randGalaxy.txt  stack.yaml
Barnes-Hut/docs/: simulating-galaxies.md
Barnes-Hut/src/: BarnesHut.hs  Bodies.hs  Constants.hs  DataTypes.hs  GalaxyModels.hs  Gravity.hs  Main.hs  RandomBodies.hs  Render.hs  Utils.hs
Barnes-Hut/test/: Spec.hs
Direct-Simulation/: Direct-Simulation.cabal  README.md
Direct-Simulation/src/: DataTypes.hs  Gravity.hs  Main.hs  SolarSystem.hs
