name:                Direct-Simulation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adityavkk/
license:             BSD3
license-file:        LICENSE
author:              Aditya V K
maintainer:          adityavkk@gmail.com
copyright:           2017 Aditya V K
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Direct-Simulation
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
